; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/cio/extr_ioasm.c_hsch.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/cio/extr_ioasm.c_hsch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.subchannel_id = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hsch(i32 %0) #0 {
  %2 = alloca %struct.subchannel_id, align 4
  %3 = alloca i32, align 4
  %4 = getelementptr inbounds %struct.subchannel_id, %struct.subchannel_id* %2, i32 0, i32 0
  store i32 %0, i32* %4, align 4
  %5 = getelementptr inbounds %struct.subchannel_id, %struct.subchannel_id* %2, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @__hsch(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = getelementptr inbounds %struct.subchannel_id, %struct.subchannel_id* %2, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @trace_s390_cio_hsch(i32 %10, i32 %8)
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @__hsch(i32) #1

declare dso_local i32 @trace_s390_cio_hsch(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
